--- a/assets/less/common.less
+++ b/assets/less/common.less
@@ -30,7 +30,7 @@ input[type="submit"] {
     &:hover,
     &:focus,
     &:active {
-        background: @theme-color;
+        opacity: .9;
     }
 }
 
