--- a/assets/less/dokan.less
+++ b/assets/less/dokan.less
@@ -485,11 +485,10 @@ input[type="submit"].dokan-btn, a.dokan-btn, .dokan-btn {
                 }
 
                 .dokan-btn {
-                    border: 1px solid #EAECF4;
                     .rounded(3px);
                     .box-shadow(0px 2px 10px 0px rgba(0, 0, 0, 0.07));
                     color: #fff;
-                    font-size: 16px;
+                    font-size: 1rem;
                     line-height: 1.2em;
                     padding: 9px 21px;
                     &.dokan-follow-store-button-working:after {
