--- a/assets/less/page-home.less
+++ b/assets/less/page-home.less
@@ -224,7 +224,7 @@ body.dokanee-template-front-page {
 
 // Store Section
 .store-section {
-    padding: 59px 20px 37px;
+    padding: 60px 0;
     background-color: #f0f1fa;
 
     .store-wrapper {
